5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1800_2573.log
== TEST (2019-06-12 15:53:04) 
-- CODE:
from numpy import*
pe = array(eval(input("digite o peso")))
h = = array(eval(input("digite a altura")))
a = 0
b = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = c[i]+(p[i]/h[i]*h[i])
		
print(c)
-- ERROR:
File "XXXX", line 3
    h = = array(eval(input()))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:53:18) 
-- CODE:
from numpy import*
pe = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0
b = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = c[i]+(p[i]/h[i]*h[i])
		
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:54:15) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0
b = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = c[i]+(p[i]/h[i]*h[i])
		
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:55:27) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0
b = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = c[i]+p[i]/(h[i]*h[i])
		
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:56:16) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0
b = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = c[i]+p[i]/(h[i]*h[i])
		
print(round(c, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:57:22) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0
b = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = c[i]+p[i]/(h[i]*h[i])
		
print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:58:11) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0
b = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = c[i]+p[i]/(h[i]*h[i])
		
print(round(c, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:00:08) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0
b = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = c[i]+p[i]/(h[i]*h[i])
		
print(round(c, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:01:26) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0
b = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]*h[i]))
		
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:01:57) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0
b = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]*h[i]), 2)
		
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:03:24) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0
b = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]*h[i]), 2)
		
print(c)

print("O MAIOR IMC DA TURMA EH:"max(c))
-- ERROR:
File "XXXX", line 17
    print("O MAIOR IMC DA TURMA EH:"max(c))
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:04:01) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0
b = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]*h[i]), 2)
		
print(c)

print("O MAIOR IMC DA TURMA EH:",max(c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:33:48) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0
b = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]*h[i]), 2)
		
print(c)

print("O MAIOR IMC DA TURMA EH:",max(c))


if max(c)<17:
	print("MUITO ABAIXO DO PESO")
elif max(c)>=17 and max(c)<=18.49:
	print("ABAIXO DO PESO ")
elif max(c)>=18,50 and max(c)<= 24.99:
	print("PESO NORMAL")
elif max(c)>=24 and max(c)<=29.99:
	print("ACIMA DO PESO")
elif max(c)>= 30 and max(c)<= 34.99:
	print("OBESIDADE")
elif max(c)<= 35 and max(c)<=39.99:>
	print("OBESIDADE SEVERA")
elif max(c)>=40:
	print("OBESIDADE MORBIDA")


-- ERROR:
File "XXXX", line 24
    elif max(c)>=18,50 and max(c)<= 24.99:
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:34:01) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0
b = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]*h[i]), 2)
		
print(c)

print("O MAIOR IMC DA TURMA EH:",max(c))


if max(c)<17:
	print("MUITO ABAIXO DO PESO")
elif max(c)>=17 and max(c)<=18.49:
	print("ABAIXO DO PESO ")
elif max(c)>=18.50 and max(c)<= 24.99:
	print("PESO NORMAL")
elif max(c)>=24 and max(c)<=29.99:
	print("ACIMA DO PESO")
elif max(c)>= 30 and max(c)<= 34.99:
	print("OBESIDADE")
elif max(c)<= 35 and max(c)<=39.99:>
	print("OBESIDADE SEVERA")
elif max(c)>=40:
	print("OBESIDADE MORBIDA")


-- ERROR:
File "XXXX", line 30
    elif max(c)<= 35 and max(c)<=39.99:>
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:34:10) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0
b = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]*h[i]), 2)
		
print(c)

print("O MAIOR IMC DA TURMA EH:",max(c))


if max(c)<17:
	print("MUITO ABAIXO DO PESO")
elif max(c)>=17 and max(c)<=18.49:
	print("ABAIXO DO PESO ")
elif max(c)>=18.50 and max(c)<= 24.99:
	print("PESO NORMAL")
elif max(c)>=24 and max(c)<=29.99:
	print("ACIMA DO PESO")
elif max(c)>= 30 and max(c)<= 34.99:
	print("OBESIDADE")
elif max(c)<= 35 and max(c)<=39.99:
	print("OBESIDADE SEVERA")
elif max(c)>=40:
	print("OBESIDADE MORBIDA")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 16:34:43) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0
b = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]*h[i]), 2)
		
print(c)

print("O MAIOR IMC DA TURMA EH:",max(c))


if max(c)<17:
	print("MUITO ABAIXO DO PESO")
elif max(c)>=17 and max(c)<=18.49:
	print("ABAIXO DO PESO ")
elif max(c)>=18.50 and max(c)<= 24.99:
	print("PESO NORMAL")
elif max(c)>=24 and max(c)<=29.99:
	print("ACIMA DO PESO")
elif max(c)>= 30 and max(c)<= 34.99:
	print("OBESIDADE")
elif max(c)<= 35 and max(c)<=39.99:
	print("OBESIDADE SEVERA")
elif max(c)>=40:
	print("OBESIDADE MORBIDA")


-- EXECUTION TIME:
1.19148
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:45:22) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]*h[i]), 2)
		
print(c)

print("O MAIOR IMC DA TURMA EH:",max(c))


if max(c)<17:
	print("MUITO ABAIXO DO PESO")
elif max(c)>=17 and max(c)<=18.49:
	print("ABAIXO DO PESO ")
elif max(c)>=18.50 and max(c)<= 24.99:
	print("PESO NORMAL")
elif max(c)>=24 and max(c)<=29.99:
	print("ACIMA DO PESO")
elif max(c)>= 30 and max(c)<= 34.99:
	print("OBESIDADE")
elif max(c)<= 35 and max(c)<=39.99:
	print("OBESIDADE SEVERA")
elif max(c)>=40:
	print("OBESIDADE MORBIDA")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 16:45:32) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]*h[i]), 2)
		
print(c)

print("O MAIOR IMC DA TURMA EH:",max(c))


if max(c)<17:
	print("MUITO ABAIXO DO PESO")
elif max(c)>=17 and max(c)<=18.49:
	print("ABAIXO DO PESO ")
elif max(c)>=18.50 and max(c)<= 24.99:
	print("PESO NORMAL")
elif max(c)>=24 and max(c)<=29.99:
	print("ACIMA DO PESO")
elif max(c)>= 30 and max(c)<= 34.99:
	print("OBESIDADE")
elif max(c)<= 35 and max(c)<=39.99:
	print("OBESIDADE SEVERA")
elif max(c)>=40:
	print("OBESIDADE MORBIDA")


-- EXECUTION TIME:
0.961145
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:00:09) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]*h[i]), 2)
		
print(c)

print("O MAIOR IMC DA TURMA EH:",max(c))


if max(c)<17:
	print("MUITO ABAIXO DO PESO")
elif max(c)>=17 and max(c)<=18.49:
	print("ABAIXO DO PESO ")
elif max(c)>=18.50 and max(c)<= 24.99:
	print("PESO NORMAL")
elif max(c)>=24 and max(c)<=29.99:
	print("ACIMA DO PESO")
elif max(c)>= 30 and max(c)<= 34.99:
	print("OBESIDADE")
elif max(c)<= 35 and max(c)<=39.99:
	print("OBESIDADE SEVERA")
elif max(c)>=40:
	print("OBESIDADE MORBIDA")
else:
	


-- ERROR:
File "XXXX", line 36
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:00:22) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]*h[i]), 2)
		
print(c)

print("O MAIOR IMC DA TURMA EH:",max(c))


if max(c)<17:
	print("MUITO ABAIXO DO PESO")
elif max(c)>=17 and max(c)<=18.49:
	print("ABAIXO DO PESO ")
elif max(c)>=18.50 and max(c)<= 24.99:
	print("PESO NORMAL")
elif max(c)>=24 and max(c)<=29.99:
	print("ACIMA DO PESO")
elif max(c)>= 30 and max(c)<= 34.99:
	print("OBESIDADE")
elif max(c)<= 35 and max(c)<=39.99:
	print("OBESIDADE SEVERA")
elif max(c)>=40:
	print("OBESIDADE MORBIDA")

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:00:40) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]*h[i]), 2)
		
print(c)

print("O MAIOR IMC DA TURMA EH:",max(c))


if max(c)<17:
	print("MUITO ABAIXO DO PESO")
elif max(c)>=17 and max(c)<=18.49:
	print("ABAIXO DO PESO ")
elif max(c)>=18.50 and max(c)<= 24.99:
	print("PESO NORMAL")
elif max(c)>=24 and max(c)<=29.99:
	print("ACIMA DO PESO")
elif max(c)>= 30 and max(c)<= 34.99:
	print("OBESIDADE")
elif max(c)<= 35 and max(c)<=39.99:
	print("OBESIDADE SEVERA")
elif max(c)>=40:
	print("OBESIDADE MORBIDA")

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 20:02:02) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]*h[i]), 2)
		
print(c)

print("O MAIOR IMC DA TURMA EH:",max(c))


if max(c)<17:
	print("MUITO ABAIXO DO PESO")
elif max(c)>=17 and max(c)<=18.49:
	print("ABAIXO DO PESO ")
elif max(c)>=18.50 and max(c)<= 24.99:
	print("PESO NORMAL")
elif max(c)>=24 and max(c)<=29.99:
	print("ACIMA DO PESO")
elif max(c)>= 30 and max(c)<= 34.99:
	print("OBESIDADE")
elif max(c)<= 35 and max(c)<=39.99:
	print("OBESIDADE SEVERA")
elif max(c)>=40:
	print("OBESIDADE MORBIDA")

	


-- EXECUTION TIME:
1.12623
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:25:41) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]*h[i]), 2)
		
print(c)

print("O MAIOR IMC DA TURMA EH:",max(c))


if max(c)<17:
	print("MUITO ABAIXO DO PESO")
elif max(c)>=17 and max(c)<=18.49:
	print("ABAIXO DO PESO ")
elif max(c)>=18.50 and max(c)<= 24.99:
	print("PESO NORMAL")
elif max(c)>=24 and max(c)<=29.99:
	print("ACIMA DO PESO")
elif max(c)>= 30 and max(c)<= 34.99:
	print("OBESIDADE")
elif max(c)<= 35 and max(c)<=39.99:
	print("OBESIDADE SEVERA")
elif max(c)>=40:
	print("OBESIDADE MORBIDA")
elif max(c)<= 0:
	print("IMC INVALIDO")

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 08:26:16) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]*h[i]), 2)
		
print(c)

print("O MAIOR IMC DA TURMA EH:",max(c))


if max(c)<17:
	print("MUITO ABAIXO DO PESO")
elif max(c)>=17 and max(c)<=18.49:
	print("ABAIXO DO PESO ")
elif max(c)>=18.50 and max(c)<= 24.99:
	print("PESO NORMAL")
elif max(c)>=24 and max(c)<=29.99:
	print("ACIMA DO PESO")
elif max(c)>= 30 and max(c)<= 34.99:
	print("OBESIDADE")
elif max(c)<= 35 and max(c)<=39.99:
	print("OBESIDADE SEVERA")
elif max(c)>=40:
	print("OBESIDADE MORBIDA")
elif max(c)<= 0:
	print("IMC INVALIDO")

	


-- EXECUTION TIME:
0.922202
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:17:53) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]*h[i]), 2)
		


if max(c)<17:
	r = "MUITO ABAIXO DO PESO"
elif max(c)>=17 and max(c)<=18.49:
	r = "ABAIXO DO PESO "
elif max(c)>=18.50 and max(c)<= 24.99:
	r = "PESO NORMAL"
elif max(c)>=24 and max(c)<=29.99:
	r = "ACIMA DO PESO"
elif max(c)>= 30 and max(c)<= 34.99:
	r = "OBESIDADE"
elif max(c)<= 35 and max(c)<=39.99:
	r = "OBESIDADE SEVERA"
elif max(c)>=40:
	r = "OBESIDADE MORBIDA"
	
print(c)

print("O MAIOR IMC DA TURMA EH:",max(c))

print(r)


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:18:46) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso")))
h = array(eval(input("digite a altura")))
a = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]*h[i]), 2)
		


if max(c)<17:
	r = "MUITO ABAIXO DO PESO"
elif max(c)>=17 and max(c)<=18.49:
	r = "ABAIXO DO PESO "
elif max(c)>=18.50 and max(c)<= 24.99:
	r = "PESO NORMAL"
elif max(c)>=24 and max(c)<=29.99:
	r = "ACIMA DO PESO"
elif max(c)>= 30 and max(c)<= 34.99:
	r = "OBESIDADE"
elif max(c)<= 35 and max(c)<=39.99:
	r = "OBESIDADE SEVERA"
elif max(c)>=40:
	r = "OBESIDADE MORBIDA"
	
print(c)

print("O MAIOR IMC DA TURMA EH:",max(c))

print(r)


	


-- EXECUTION TIME:
1.20867
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:19:04) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso: ")))
h = array(eval(input("digite a altura: ")))
a = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]*h[i]), 2)
		


if max(c)<17:
	r = "MUITO ABAIXO DO PESO"
elif max(c)>=17 and max(c)<=18.49:
	r = "ABAIXO DO PESO "
elif max(c)>=18.50 and max(c)<= 24.99:
	r = "PESO NORMAL"
elif max(c)>=24 and max(c)<=29.99:
	r = "ACIMA DO PESO"
elif max(c)>= 30 and max(c)<= 34.99:
	r = "OBESIDADE"
elif max(c)<= 35 and max(c)<=39.99:
	r = "OBESIDADE SEVERA"
elif max(c)>=40:
	r = "OBESIDADE MORBIDA"
	
print(c)

print("O MAIOR IMC DA TURMA EH:",max(c))

print(r)


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:19:44) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso: ")))
h = array(eval(input("digite a altura: ")))
a = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]*h[i]), 2)
		


if max(c)<17:
	r = "MUITO ABAIXO DO PESO"
elif max(c)>=17 and max(c)<=18.49:
	r = "ABAIXO DO PESO "
elif max(c)>=18.50 and max(c)<= 24.99:
	r = "PESO NORMAL"
elif max(c)>=24 and max(c)<=29.99:
	r = "ACIMA DO PESO"
elif max(c)>= 30 and max(c)<= 34.99:
	r = "OBESIDADE"
elif max(c)<= 35 and max(c)<=39.99:
	r = "OBESIDADE SEVERA"
elif max(c)>=40:
	r = "OBESIDADE MORBIDA"
	
print(c)

print("O MAIOR IMC DA TURMA EH:",max(c))

print(r)


	


-- EXECUTION TIME:
1.18485
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:20:09) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso: ")))
h = array(eval(input("digite a altura: ")))
a = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]*h[i]), 2)
		


if max(c)<17:
	r = "MUITO ABAIXO DO PESO"
elif max(c)>=17 and max(c)<=18.49:
	r = "ABAIXO DO PESO "
elif max(c)>=18.50 and max(c)<= 24.99:
	r = "PESO NORMAL"
elif max(c)>=24 and max(c)<=29.99:
	r = "ACIMA DO PESO"
elif max(c)>= 30 and max(c)<= 34.99:
	r = "OBESIDADE"
elif max(c)<= 35 and max(c)<=39.99:
	r = "OBESIDADE SEVERA"
elif max(c)>=40:
	r = "OBESIDADE MORBIDA"
	
print(c)

print("O MAIOR IMC DA TURMA EH:",max(c))

print(r)


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:22:03) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso: ")))
h = array(eval(input("digite a altura: ")))
a = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]*h[i]), 2)
		


if max(c)<17:
	r = "MUITO ABAIXO DO PESO"
elif max(c)>=17 and max(c)<=18.49:
	r = "ABAIXO DO PESO "
elif max(c)>=18.50 and max(c)<= 24.99:
	r = "PESO NORMAL"
elif max(c)>=24 and max(c)<=29.99:
	r = "ACIMA DO PESO"
elif max(c)>= 30 and max(c)<= 34.99:
	r = "OBESIDADE"
elif max(c)<= 35 and max(c)<=39.99:
	r = "OBESIDADE SEVERA"
elif max(c)>=40:
	r = "OBESIDADE MORBIDA"
	
print(c)

print("O MAIOR IMC DA TURMA EH:",max(c))

print(r)


	


-- EXECUTION TIME:
1.06256
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:31:15) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso: ")))
h = array(eval(input("digite a altura: ")))
a = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]**2), 2)
		


if max(c)<17:
	r = "MUITO ABAIXO DO PESO"
elif max(c)>=17 and max(c)<=18.49:
	r = "ABAIXO DO PESO "
elif max(c)>=18.50 and max(c)<= 24.99:
	r = "PESO NORMAL"
elif max(c)>=24 and max(c)<=29.99:
	r = "ACIMA DO PESO"
elif max(c)>= 30 and max(c)<= 34.99:
	r = "OBESIDADE"
elif max(c)<= 35 and max(c)<=39.99:
	r = "OBESIDADE SEVERA"
elif max(c)>=40:
	r = "OBESIDADE MORBIDA"
	
print(c)

print("O MAIOR IMC DA TURMA EH:",max(c))

print(r)


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:31:57) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso: ")))
h = array(eval(input("digite a altura: ")))
a = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]**2), 2)
		


if max(c)<17:
	r = "MUITO ABAIXO DO PESO"
elif max(c)>=17 and max(c)<=18.49:
	r = "ABAIXO DO PESO "
elif max(c)>=18.50 and max(c)<= 24.99:
	r = "PESO NORMAL"
elif max(c)>=24 and max(c)<=29.99:
	r = "ACIMA DO PESO"
elif max(c)>= 30 and max(c)<= 34.99:
	r = "OBESIDADE"
elif max(c)<= 35 and max(c)<=39.99:
	r = "OBESIDADE SEVERA"
elif max(c)>=40:
	r = "OBESIDADE MORBIDA"
	
print(c)

print("O MAIOR IMC DA TURMA EH:",max(c))

print(r)


	


-- EXECUTION TIME:
1.01801
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:32:40) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso: ")))
h = array(eval(input("digite a altura: ")))
a = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]**2), 2)
		


if max(c)<17:
	r = "MUITO ABAIXO DO PESO"
elif max(c)>+17 and max(c)<=18.49:
	r = "ABAIXO DO PESO "
elif max(c)>=18.50 and max(c)<= 24.99:
	r = "PESO NORMAL"
elif max(c)>=24 and max(c)<=29.99:
	r = "ACIMA DO PESO"
elif max(c)>= 30 and max(c)<= 34.99:
	r = "OBESIDADE"
elif max(c)<= 35 and max(c)<=39.99:
	r = "OBESIDADE SEVERA"
elif max(c)>=40:
	r = "OBESIDADE MORBIDA"
	
print(c)

print("O MAIOR IMC DA TURMA EH:",max(c))

print(r)


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:33:10) 
-- CODE:
from numpy import*
p = array(eval(input("digite o peso: ")))
h = array(eval(input("digite a altura: ")))
a = 0


for i in range(size(h)): 	
	a = a + 1
	
c = zeros(a, dtype=float)
for i in range(size(h)):
		c[i] = round(c[i]+p[i]/(h[i]**2), 2)
		


if max(c)<17:
	r = "MUITO ABAIXO DO PESO"
elif max(c)>+17 and max(c)<=18.49:
	r = "ABAIXO DO PESO "
elif max(c)>=18.50 and max(c)<= 24.99:
	r = "PESO NORMAL"
elif max(c)>=24 and max(c)<=29.99:
	r = "ACIMA DO PESO"
elif max(c)>= 30 and max(c)<= 34.99:
	r = "OBESIDADE"
elif max(c)<= 35 and max(c)<=39.99:
	r = "OBESIDADE SEVERA"
elif max(c)>=40:
	r = "OBESIDADE MORBIDA"
	
print(c)

print("O MAIOR IMC DA TURMA EH:",max(c))

print(r)


	


-- EXECUTION TIME:
0.736924
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
